--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,13 @@
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "path": "^0.12.7"
   },
   "private": true
 }
