--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -23,8 +25,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "expo-updates": "~0.16.4"
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
