--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,11 @@
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
     "react-native-fs": "^2.20.0",
+    "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
