--- a/frontend/eas.json
+++ b/frontend/eas.json
@@ -5,13 +5,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development"
     },
     "preview": {
       "distribution": "internal",
       "channel": "preview"
     },
-    "production": {"channel": "production"}
+    "production": {
+      "channel": "production"
+    }
   },
   "submit": {
     "production": {}
