--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.22.5",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-picker/picker": "2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -16,12 +18,12 @@
     "@react-navigation/native-stack": "^6.9.12",
     "dotenv": "^16.1.4",
     "expo": "~48.0.15",
+    "expo-document-picker": "~11.2.2",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "firebase": "^9.22.0",
-    "jest": "^29.2.1",
-    "jest-expo": "^48.0.2",
+    "jest": "^29.6.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
@@ -31,10 +33,18 @@
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-test-renderer": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-flow": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/register": "^7.22.5",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
+    "jest-expo": "^49.0.0",
     "path": "^0.12.7"
   },
   "private": true
