--- a/frontend/.github/workflows/bruh.yml
+++ b/frontend/.github/workflows/bruh.yml
@@ -2,9 +2,8 @@ name: Unit and Integration Tests
 
 on: 
   pull_request:
-    branches: 
-      - main
-
+    branches: [ main ]
+    
 jobs: 
   test: 
     runs-on: ubuntu-latest
