--- a/frontend/.github/workflows/bruh.yml
+++ b/frontend/.github/workflows/bruh.yml
@@ -7,6 +7,9 @@ on:
 jobs: 
   test: 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./frontend/
       
     strategy:
       matrix: 
