--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "jest": "^29.6.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-image-picker": "^5.6.0",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
