--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "dotenv": "^16.1.4",
     "expo": "~48.0.15",
+    "expo-app-loading": "^2.1.1",
     "expo-document-picker": "~11.2.2",
+    "expo-font": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
@@ -27,10 +29,11 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-document-picker": "^9.0.1",
-    "react-native-dotenv": "^3.4.8",
+    "react-native-dotenv": "^3.4.9",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^5.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.8.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "^4.5.0",
